--- a/circles/index.html
+++ b/circles/index.html
@@ -20,6 +20,7 @@
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="reducer.js"></script>
     <script src="App.js" type="text/babel"></script>
+    <script src="Circle.js" type="text/babel"></script>
     <script src="index.js" type="text/babel"></script>
 </body>
 </html>
